pkg/klarerrors/reporter/testdata/got_output.txt
File generated by ../reporter_test.go. DO NOT EDIT

SingleLine:
Syntax error: Use '=' instead of ':=' to set a default (colonEqual)

  ┌─ main.klar:1:3
1 │ x := 1
  ·   ━━ Use ':=' instead

SingleLine_1Highlight:
Syntax error: Use '=' instead of ':=' to set a default (colonEqual)

  ┌─ main2.klar:1:3
1 │ x := 1
  · ^ ━━ Use ':=' instead
  · ╰─ This is 'x'

SingleLine_2Highlights:
Syntax error: Use '=' instead of ':=' to set a default (colonEqual)

  ┌─ main.klar:1:3
1 │ x := 1
  · ^ ┯━ ^ 'x' is set to 1
  · │ ╰─ Use ':=' instead
  · ╰─ This is 'x'

Multiline_2Highlights:
Syntax error: Braces are required around this statement (requiredBraces)

  ┌─ main.klar:2:3
1 │ deleteThisLine()
  · ╭━━━━━━━━━━━━━━━━
2 │ │ x := 1
  · │   ┯━ ^ 'x' is set to 1
  · │   ╰─ Something else is better
  · ╰━━━━━━━ Please delete this

